@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2017,v 1.5176 2017/12/06 21:18:42 jdolecek Exp $
+$NetBSD: CHANGES-2017,v 1.5177 2017/12/06 21:54:55 triaxx Exp $
 
 Changes to the packages collection and infrastructure in 2017:
 
@@ -7431,3 +7431,4 @@ Changes to the packages collection and infrastructure in 2017:
 	Updated time/py-tzlocal to 1.5.1 [adam 2017-12-06]
 	Updated www/py-sanic to 0.7.0 [adam 2017-12-06]
 	Updated databases/php-mongodb to 1.3.4 [jdolecek 2017-12-06]
+	Added time/py-monotonic to 1.4 [triaxx 2017-12-06]
